--- a/html/06_Gene_set_testing.html
+++ b/html/06_Gene_set_testing.html
@@ -213,15 +213,6 @@ summary {
 </ul>
 </div>
 
-<pre class="r"><code>library(tidyverse)</code></pre>
-<pre><code>## ── Attaching packages ─────────────────────────────────────────────────────────────────────────────── tidyverse 1.3.0 ──</code></pre>
-<pre><code>## ✓ ggplot2 3.3.0     ✓ purrr   0.3.4
-## ✓ tibble  3.0.1     ✓ dplyr   0.8.5
-## ✓ tidyr   1.0.3     ✓ stringr 1.4.0
-## ✓ readr   1.3.1     ✓ forcats 0.5.0</code></pre>
-<pre><code>## ── Conflicts ────────────────────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
-## x dplyr::filter() masks stats::filter()
-## x dplyr::lag()    masks stats::lag()</code></pre>
 <p>The list of differentially expressed genes is sometimes so long that its interpretation becomes cumbersome and time consuming. A common downstream procedure is gene set testing. It aims at understanding which pathways or gene networks the differentially expressed genes are implicated in.</p>
 <p>Various ways exist to test for enrichment of biological pathways.</p>
 <div id="gsea-analysis" class="section level1">
@@ -282,25 +273,23 @@ pathwaysH &lt;- Mm.H</code></pre>
 <pre class="r"><code>fgseaRes %&gt;% 
     arrange(desc(abs(NES))) %&gt;% 
     top_n(10, -padj)</code></pre>
-<pre><code>## # A tibble: 16 x 8
+<pre><code>## # A tibble: 14 x 8
 ##    pathway              pval    padj     ES   NES nMoreExtreme  size leadingEdge
 ##    &lt;chr&gt;               &lt;dbl&gt;   &lt;dbl&gt;  &lt;dbl&gt; &lt;dbl&gt;        &lt;dbl&gt; &lt;int&gt; &lt;list&gt;     
-##  1 HALLMARK_CHOLEST… 0.00221 0.00727  0.609  2.35            0    73 &lt;chr [33]&gt; 
-##  2 HALLMARK_OXIDATI… 0.00228 0.00727  0.514  2.27            0   196 &lt;chr [127]&gt;
-##  3 HALLMARK_TGF_BET… 0.00183 0.00727 -0.591 -2.09            0    54 &lt;chr [17]&gt; 
-##  4 HALLMARK_ADIPOGE… 0.00227 0.00727  0.445  1.98            0   199 &lt;chr [86]&gt; 
-##  5 HALLMARK_FATTY_A… 0.00227 0.00727  0.438  1.88            0   155 &lt;chr [56]&gt; 
-##  6 HALLMARK_KRAS_SI… 0.00175 0.00727 -0.415 -1.82            0   190 &lt;chr [58]&gt; 
-##  7 HALLMARK_MTORC1_… 0.00233 0.00727  0.410  1.82            0   203 &lt;chr [79]&gt; 
-##  8 HALLMARK_ESTROGE… 0.00176 0.00727 -0.411 -1.80            0   193 &lt;chr [64]&gt; 
-##  9 HALLMARK_INFLAMM… 0.00175 0.00727 -0.398 -1.74            0   188 &lt;chr [56]&gt; 
-## 10 HALLMARK_PEROXIS… 0.00216 0.00727  0.426  1.73            0    95 &lt;chr [35]&gt; 
-## 11 HALLMARK_TNFA_SI… 0.00178 0.00727 -0.388 -1.70            0   199 &lt;chr [69]&gt; 
-## 12 HALLMARK_COAGULA… 0.00180 0.00727 -0.406 -1.68            0   129 &lt;chr [39]&gt; 
-## 13 HALLMARK_MYC_TAR… 0.00176 0.00727 -0.364 -1.61            0   201 &lt;chr [69]&gt; 
-## 14 HALLMARK_ESTROGE… 0.00176 0.00727 -0.349 -1.53            0   197 &lt;chr [52]&gt; 
-## 15 HALLMARK_ALLOGRA… 0.00175 0.00727 -0.341 -1.51            0   202 &lt;chr [57]&gt; 
-## 16 HALLMARK_E2F_TAR… 0.00176 0.00727 -0.336 -1.48            0   201 &lt;chr [91]&gt;</code></pre>
+##  1 HALLMARK_CHOLEST… 0.00209 0.00776  0.609  2.36            0    73 &lt;chr [33]&gt; 
+##  2 HALLMARK_OXIDATI… 0.00216 0.00776  0.514  2.29            0   196 &lt;chr [127]&gt;
+##  3 HALLMARK_TGF_BET… 0.00189 0.00776 -0.591 -2.11            0    54 &lt;chr [17]&gt; 
+##  4 HALLMARK_ADIPOGE… 0.00217 0.00776  0.445  1.98            0   199 &lt;chr [86]&gt; 
+##  5 HALLMARK_NOTCH_S… 0.00193 0.00776 -0.605 -1.91            0    31 &lt;chr [15]&gt; 
+##  6 HALLMARK_FATTY_A… 0.00215 0.00776  0.438  1.89            0   155 &lt;chr [56]&gt; 
+##  7 HALLMARK_MTORC1_… 0.00211 0.00776  0.410  1.84            0   203 &lt;chr [79]&gt; 
+##  8 HALLMARK_KRAS_SI… 0.00183 0.00776 -0.415 -1.84            0   190 &lt;chr [58]&gt; 
+##  9 HALLMARK_ESTROGE… 0.00185 0.00776 -0.411 -1.82            0   193 &lt;chr [64]&gt; 
+## 10 HALLMARK_INFLAMM… 0.00187 0.00776 -0.398 -1.75            0   188 &lt;chr [56]&gt; 
+## 11 HALLMARK_TNFA_SI… 0.00185 0.00776 -0.388 -1.72            0   199 &lt;chr [69]&gt; 
+## 12 HALLMARK_COAGULA… 0.00189 0.00776 -0.406 -1.70            0   129 &lt;chr [39]&gt; 
+## 13 HALLMARK_MYC_TAR… 0.00185 0.00776 -0.364 -1.62            0   201 &lt;chr [69]&gt; 
+## 14 HALLMARK_ESTROGE… 0.00186 0.00776 -0.349 -1.55            0   197 &lt;chr [52]&gt;</code></pre>
 </div>
 <div id="enrichment-score-plot" class="section level2">
 <h2>Enrichment score plot</h2>
